# ESP32-SIP-Voice

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.md.metadata.json  app_config.c  app_config.h  audio_pipeline.c  check_gh.py  codec_driver.c  config_manager.c  config_manager.c.metadata.json  config_manager.h  config_manager.h.metadata.json  display.c.metadata.json  display.h  display.h.metadata.json  g711_codec.c  get_logs.py  main.c  partitions.csv  preview_call.html  preview_call.html.metadata.json  preview_hardware.html  preview_hardware.html.metadata.json  preview_setup.html  preview_setup.html.metadata.json  rtp_handler.c  sdkconfig.defaults  sip_client.c  sip_client.h  sip_client.h.metadata.json  ui_controller.c  ui_controller.c.metadata.json  ui_controller.h  ui_controller.h.metadata.json  wifi_manager.c  wifi_manager.c.metadata.json  wifi_manager.h  (+1 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
components/audio_pipeline/: CMakeLists.txt  CMakeLists.txt.metadata.json  aec_filter.c  aec_filter.c.metadata.json  aec_filter.h  aec_filter.h.metadata.json  g722_codec.c  g722_codec.c.metadata.json  g722_codec.h  g722_codec.h.metadata.json  idf_component.yml  opus_codec.c  opus_codec.c.metadata.json  opus_codec.h  opus_codec.h.metadata.json  wake_word.c  wake_word.h
components/board_hal/: display_tft.c  touch_driver.c  touch_driver.h
components/config_store/: CMakeLists.txt  app_config.h  config_manager.c  config_manager.h
components/hal/: CMakeLists.txt  CMakeLists.txt.metadata.json  display_tft.c  display_tft.c.metadata.json  display_tft.h  display_tft.h.metadata.json  keypad.c  keypad.c.metadata.json  keypad.h  keypad.h.metadata.json  touch_driver.c  touch_driver.c.metadata.json  touch_driver.h.metadata.json
components/storage/: CMakeLists.txt  CMakeLists.txt.metadata.json  phonebook.c  phonebook.c.metadata.json  phonebook.h  phonebook.h.metadata.json
components/ui_lvgl/: CMakeLists.txt  CMakeLists.txt.metadata.json  idf_component.yml  idf_component.yml.metadata.json  ui_lvgl.c  ui_lvgl.c.metadata.json  ui_lvgl.h  ui_lvgl.h.metadata.json
main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.metadata.json  app_config.h  audio_pipeline.c  audio_pipeline.h  codec_driver.c  codec_driver.h  display.c  g711_codec.c  g711_codec.h  idf_component.yml  main.c  rtp_handler.c  rtp_handler.h  sip_client.c  sip_client.h  ui_controller.c  wifi_manager.c  wifi_manager.h
simulator/: CMakeLists.txt  CMakeLists.txt.metadata.json  README.md  lv_conf.h  lv_conf.h.metadata.json  lv_drv_conf.h  lv_drv_conf.h.metadata.json  main.c  main.c.metadata.json
